--- a/CSS/style .css
+++ b/CSS/style .css
@@ -107,7 +107,7 @@ footer{
 
 /* Step 1: Write selector/rule property to add an underline when
 links in the navigation are in the hover or focus state.*/
-nav a:hover, nav a:focus {
+nav li:hover{
   text-decoration: underline;
 }
 
@@ -119,82 +119,49 @@ nav a:hover, nav a:focus {
 }
 
 /* Step 2b: Write selector/rule property to position the skip class element when it is in focus*/
-.skip a:focus {
-  top: 20px; 
-}
+.skip a:focus{
+top:20px;}
 
 /* Step 3: Write selector/rule property to style all elements when in focus*/
-*:focus {
-  border: solid 2px black;
-}
+ :focus{
+  border: 2px solid;
+ }
 
 
 /* Step 4: Write selector/rule property to style the container */
-.container {
+.container{
   display:grid;
   grid-template-columns: 1fr 5fr 1fr;
-  gap: 15px;
+  gap:15px;
 }
-
-.container div:first-child {
-  grid-column: 1 / -1;
-  min-height: 500px;
-  background-image: url('../images/header.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-
-.about {
-  grid-column: 2 / span 1; /* Begin in 2nd column and span one column */
-  grid-row: 2; /* Begin on the 2nd row */
-}
-
-.method {
-  grid-column: 2 / span 1; /* Begin in 2nd column and span one column */
-  grid-row: 3; /* Begin on the 3rd row */
-}
-
-.clients {
-  grid-column: 2 / span 1; /* Begin in 2nd column and span one column */
-  grid-row: 4; /* Begin on the 4th row */
-}
-
-.contact {
-  grid-column: 2 / span 1; /* Begin in 2nd column and span one column */
-  grid-row: 5; /* Begin on the 5th row */
-}
-
+.container div:first-child{grid-row: 1;
+grid-column: 1/-1;
+min-height: 500px;
+background-image: url(../images/header.jpg);
+background-attachment: fixed;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;}
+/* image{width:100%} */
+.about,.method,.clients,.contact,.contact{grid-column: 2/span 1;}
+.about{
+grid-row: 2;}
+.method{
+  grid-row: 3;}
+.clients{
+  grid-row: 4;}
+.contact{
+grid-row: 5;}
 
 /* Step 5: Write selector/rule property to add the background image to the 
 first div in the grid  and place it in the grid. */
-.about-image,
-.method-image,
-.clients-image,
-.contact-image {
-  grid-column: 1 / -1; /* Cover all of the columns */
-  max-height: 600px; /* Have a maximum height of 600px */
-  overflow: hidden; /* Hide any content that goes outside their grid cell */
-}
-
-.about-image {
-  grid-row: 2; /* Begin on the 2nd row */
-}
-
-.method-image {
-  grid-row: 3; /* Begin on the 3rd row */
-}
-
-.clients-image {
-  grid-row: 4; /* Begin on the 4th row */
-}
-
-.contact-image {
-  grid-row: 5; /* Begin on the 5th row */
-}
-
-
-
+.about-image,.method-image,.clients-image,.contact-image{max-height: 600px;
+overflow:hidden;
+grid-column: 1/-1;}
+.about-image{grid-row:2;}
+.method-image{grid-row:3;}
+.clients-image{grid-row:4;}
+.contact-image{grid-row:5;}
 /* Steps 6 and 7: Write the selector/rule properties to add place the next elements in the next
  four rows in the grid. */
 
@@ -202,43 +169,24 @@ first div in the grid  and place it in the grid. */
 
 
  /* Step 8: Write the selector/rule property to style the .text-block class. */
-.text-block {
-    /* display: flex;
-    justify-content: center; */
-    align-items: center;
-    max-height: 250px;
-    overflow: auto;
-    /* text-align: center; */
-}
-
+.text-block{margin: auto;
+max-height:250px;
+overflow:scroll;
+align-self: center;}
+.text-block::-webkit-scrollbar{display:none;}
 
 /* Add your media query here */
-@media screen and (min-width: 800px) {
+@media screen and (min-width:800px){
 
   /* Step 9: Write the selector/rule property to style the nav element */
-  nav {
-    text-align: right;
-    padding: 30px 0px;
-  }
+nav{ text-align: right;
+  padding:30px 0px 30px 0px;}
   
- 
   /* Step 10: Write the selector/rule property to update the .container class */
-  .container {
-    display: grid;
-    grid-template-columns: 50px auto 500px auto 50px;
-    /* You can add any additional grid-related properties here */
-  }
-  
-
-  /* Steps 11 and 12: Update the grid-column property of the grid's children (where-needed)*/
-  .about, .clients, .method-image, .contact-image {
-    grid-column: 3 / span 2; /* Span two columns */
-  }
-  
-  .method, 
-.contact, 
-.about-image, 
-.clients-image {
-  grid-column: 2 / span 2 ;/* Span two columns */
+.container{
+  grid-template-columns: 50px auto 500px auto 50px;
 }
+  /* Steps 11 and 12: Update the grid-column property of the grid's children (where-needed)*/
+.about,.method-image,.clients,.contact-image{grid-column: 3/5}
+.about-image,.method,.clients-image,.contact{grid-column:2/4}
 }
